[gd_scene load_steps=4 format=3 uid="uid://mk8hjrnhbag5"]

[ext_resource type="Script" path="res://scenes/spawn_timer.gd" id="1_2xb81"]
[ext_resource type="Script" path="res://scenes/main.gd" id="1_g223k"]

[sub_resource type="Curve2D" id="Curve2D_r22s7"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 800, 0)
}
point_count = 2

[node name="Main" type="Node2D"]
script = ExtResource("1_g223k")

[node name="SpawnTimer" type="Timer" parent="."]
script = ExtResource("1_2xb81")

[node name="SpawnPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_r22s7")

[node name="SpawnLocation" type="PathFollow2D" parent="SpawnPath"]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
